[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Samuele Bruna <samuele.bruna.nttdata@skytv.it>"]
readme = "README.md"
packages = [{include = "cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
