[tool.poetry]
name = "logger"
version = "0.1.0"
description = ""
authors = ["Samuele Bruna <samuele.bruna.nttdata@skytv.it>"]
readme = "README.md"
packages = [{include = "logger", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pathlib = "^1.0.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
